# snek5000-phill

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
src/phill/: Snakefile  __init__.py  output.py  phill.usr  solver.py
src/phill/etc/: archmage.yml  tetralith.yml
src/phill/templates/: __init__.py
src/phill/toolbox/: CHKPOINTD  FRAMELP  IOTOOLD  MNTRLOGD  MNTRTMRD  README.md  RPRMD  frame.f  mntrtmr.f  stat_IO.f
tests/: conftest.py  test_solver.py
