[metadata]
author = Ashwin Vishnu Mohanan
author_email = dev@fluid.quest
url = https://github.com/snek5000/snek5000-phill
name = snek5000-phill
description = Nek5000 phill example executed via snek5000
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    snek5000 >= 0.9.0rc2
setup_requires =
    setuptools_scm

[options.entry_points]
snek5000.solvers =
    phill = phill.solver

[options.extras_require]
docs =
    sphinx
    recommonmark
    sphinx_rtd_theme
    breathe
    setuptools_scm

tests =
    pytest
    ipython

hpc =
    %(tests)s
    click

dev =
    %(docs)s
    %(hpc)s
    colorlog
    pdbpp
    rope
    python-language-server
    fortran-language-server
    pre-commit
    twine
    build
    readme-renderer[md]

[options.packages.find]
where=src

[options.package_data]
phill = templates/*.j2, toolbox/*, *.usr, *.par, *.box, SIZE, Snakefile, etc/*.yml

[flake8]
ignore = E501,W503,W505
max-line-lenght = 82

[isort]
known_first_party = fluiddyn, fluidsim, snek5000, phill
multi_line_output = 3
